--- a/catalog.html
+++ b/catalog.html
@@ -2,6 +2,7 @@
 <html lang="ru">
   <head>
     <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width,initial-scale=1">
     <title>HTML Academy: Мишка</title>
     <link rel="stylesheet" href="css/style.css">
   </head>
@@ -16,18 +17,18 @@
             </a>
           </div>
           <ul class="main-nav__menu-list  main-nav__menu-list--main">
-            <li class="main-nav__menu-item">
+            <li class="main-nav__menu-item  main-nav__menu-item--main">
               <a class="main-nav__link" href="#">Каталог товаров</a>
             </li>
-            <li class="main-nav__menu-item">
+            <li class="main-nav__menu-item  main-nav__menu-item--main">
               <a class="main-nav__link" href="form.html">Вязание на заказ</a>
             </li>
           </ul>
           <ul class="main-nav__menu-list  main-nav__menu-list--user">
-            <li class="main-nav__menu-item">
+            <li class="main-nav__menu-item   main-nav__menu-item--user">
               <a class="main-nav__link  main-nav__link--search" href="#">Поиск по сайту</a>
             </li>
-            <li class="main-nav__menu-item">
+            <li class="main-nav__menu-item  main-nav__menu-item--user">
               <a class="main-nav__link  main-nav__link--cart" href="#">Корзина: пока пуста</a>
             </li>
           </ul>
@@ -49,41 +50,68 @@
       </section>
       <section class="product-catalog">
         <article class="product">
-          <a href="#"><img class="product__img" src="img/photo-1-mobile@1x.jpg" width="260" height="195" alt="Зайчик-попрыгайчик"></a>
-          <a class="product__title" href="#">Зайчик-попрыгайчик</a>
-          <span class="product__properties">Рост 30 см, вес 200 г</span>
-          <b class="product__cy">1 200 руб.</b>
-          <a class="product__buy" href="#"><img src="img/icon-cart.svg" width="21" height="19" alt="Заказать"></a>
+          <a class="product__photo" href="#">
+            <!--img class="product__img" src="img/photo-1-mobile@1x.jpg" width="260" height="195" alt="Зайчик-попрыгайчик"-->
+          </a>
+          <div class="product__content">
+            <a class="product__title" href="#">Зайчик-попрыгайчик</a>
+            <span class="product__properties">Рост 30 см, вес 200 г</span>
+            <div class="product__wrapper">
+              <b class="product__cy">1 200 руб.</b>
+              <a class="product__buy" href="#">
+                <img src="img/icon-cart.svg" width="21" height="19" alt="Заказать">
+              </a>
+            </div>
+          </div>
         </article>
         <article class="product">
-          <a href="#"><img class="product__img" src="img/photo-2-mobile@1x.jpg" width="260" height="195" alt="Корзинка для белья"></a>
-          <a class="product__title" href="#">Корзинка для белья</a>
-          <span class="product__properties">Диаметр 15 см, высота 10 см</span>
-          <b class="product__cy">690 руб.</b>
-          <a class="product__buy" href="#"><img src="img/icon-cart.svg" width="21" height="19" alt="Заказать"></a>
+          <a class="product__photo" href="#">
+            <!--img class="product__img" src="img/photo-2-mobile@1x.jpg" width="260" height="195" alt="Корзинка для белья"-->
+          </a>
+          <div class="product__content">
+            <a class="product__title" href="#">Корзинка для белья</a>
+            <span class="product__properties">Диаметр 15 см, высота 10 см</span>
+            <div class="product__wrapper">
+              <b class="product__cy">690 руб.</b>
+              <a class="product__buy" href="#">
+                <img src="img/icon-cart.svg" width="21" height="19" alt="Заказать">
+              </a>
+            </div>
+          </div>
         </article>
         <article class="product">
-          <a href="#"><img class="product__img" src="img/photo-3-mobile@1x.jpg" width="260" height="195" alt="Большая корзинка для игрушек"></a>
-          <a class="product__title" href="#">Большая корзинка для игрушек</a>
-          <span class="product__properties">Диаметр 30 см, высота 30 см</span>
-          <b class="product__cy">1 500 руб.</b>
-          <a class="product__buy" href="#"><img src="img/icon-cart.svg" width="21" height="19" alt="Заказать"></a>
+          <a class="product__photo" href="#">
+            <!--img class="product__img" src="img/photo-3-mobile@1x.jpg" width="260" height="195" alt="Большая корзинка для игрушек"-->
+          </a>
+          <div class="product__content">
+            <a class="product__title" href="#">Большая корзинка для игрушек</a>
+            <span class="product__properties">Диаметр 30 см, высота 30 см</span>
+            <div class="product__wrapper">
+              <b class="product__cy">1 500 руб.</b>
+              <a class="product__buy" href="#">
+                <img src="img/icon-cart.svg" width="21" height="19" alt="Заказать">
+              </a>
+            </div>
+          </div>
         </article>
       </section>
       <section class="production">
         <b class="production__title">Процесс производства</b>
         <!--video controls preload="metadata" width="260" height="150" poster="img/video-mobile@1x.jpg"></video-->
-        <img class="production__video" src="img/video-mobile@1x.jpg" width="260" height="150" alt="Процесс производства">
-        <p class="production__desc">
-          По просьбам наших любимых фолловеров мы сняли для вас подробное видео о том, как появляются наши товары.
-        </p>
-        <a class="btn production__order" href="#">Сделать заказ</a>
+        <!--img class="production__video" src="img/video-mobile@1x.jpg" width="260" height="150" alt="Процесс производства"-->
+        <div class="production__video"></div>
+        <div class="production__content">
+          <p class="production__desc">
+            По просьбам наших любимых фолловеров мы сняли для вас подробное видео о том, как появляются наши товары.
+          </p>
+          <a class="btn production__order" href="#">Сделать заказ</a>
+        </div>
       </section>
     </main>
     <footer class="page-footer">
       <div class="page-footer__wrapper">
         <div class="logo  logo--footer">
-          <a href="index.html">
+          <a href="#">
             <img src="img/logo-mobile.svg" width="86" height="35" alt="Интернет-магазин «Мишка»">
           </a>
         </div>
@@ -98,22 +126,6 @@
         </div>
       </div>
     </footer>
-    <div class="modal-overlay"></div>
-    <div class="modal-size">
-      <b class="modal-size__title">Добавить в корзину</b>
-      <form class="modal-size__form" action="#" method="post">
-        <p class="modal-size__label">Выберите размер:</p>
-        <div class="modal-size__toggles">
-          <input type="radio" name="product-size" value="size-s" id="size-s" checked>
-          <label for="size-s">S</label>
-          <input type="radio" name="product-size" value="size-m" id="size-m">
-          <label for="size-m">M</label>
-          <input type="radio" name="product-size" value="size-l" id="size-l">
-          <label for="size-l">L</label>
-        </div>
-        <button class="modal-size__add" type="submit">Добавить</button>
-      </form>
-    </div>
     <script src="js/mobile-menu.js"></script>
   </body>
 </html>
