Обновил разметку модального окна

--- a/catalog.html
+++ b/catalog.html
@@ -126,6 +126,21 @@
         </div>
       </div>
     </footer>
+    <div class="modal-size">
+      <b class="modal-size__title">Добавить в корзину</b>
+      <form class="modal-size__form" action="#" method="post">
+        <p class="modal-size__label">Выберите размер:</p>
+        <div class="modal-size__toggles">
+          <input type="radio" name="product-size" value="size-s" id="size-s" checked>
+          <label class="modal-size__btn-size" for="size-s">S</label>
+          <input type="radio" name="product-size" value="size-m" id="size-m">
+          <label class="modal-size__btn-size" for="size-m">M</label>
+          <input type="radio" name="product-size" value="size-l" id="size-l">
+          <label class="modal-size__btn-size" for="size-l">L</label>
+        </div>
+        <button class="modal-size__add" type="submit">Добавить</button>
+      </form>
+    </div>
     <script src="js/mobile-menu.js"></script>
   </body>
 </html>
