--- a/index.html
+++ b/index.html
@@ -163,11 +163,11 @@
         <p class="modal-size__label">Выберите размер:</p>
         <div class="modal-size__toggles">
           <input type="radio" name="product-size" value="size-s" id="size-s" checked>
-          <label for="size-s">S</label>
+          <label class="modal-size__btn-size" for="size-s">S</label>
           <input type="radio" name="product-size" value="size-m" id="size-m">
-          <label for="size-m">M</label>
+          <label class="modal-size__btn-size" for="size-m">M</label>
           <input type="radio" name="product-size" value="size-l" id="size-l">
-          <label for="size-l">L</label>
+          <label class="modal-size__btn-size" for="size-l">L</label>
         </div>
         <button class="modal-size__add" type="submit">Добавить</button>
       </form>
