--- a/form.html
+++ b/form.html
@@ -52,9 +52,9 @@
         <p class="knitting-form__desc">
           Мы будем рады воплотить в жизнь ваши пожелания! Заполните простую форму заказа и мы свяжемся с вами, чтобы уточнить детали.
         </p>
-        <section class="knitting-form__fieldset">
+        <section class="knitting-form__fieldset  knitting-form__fieldset--type">
           <div class="knitting-form__fieldset-wrapper">
-            <h2 class="knitting-form__legend">Тип</h2>
+            <h2 class="knitting-form__legend  knitting-form__legend--type">Тип</h2>
             <div class="knitting-form__fieldset-items">
               <label class="knitting-form__label-radio" for="knitting-type1">
                 <input class="knitting-form__input-radio" type="radio" name="knitting-type" value="knitting-type1" id="knitting-type1" checked>
@@ -67,10 +67,9 @@
             </div>
           </div>
         </section>
-
-        <section class="knitting-form__fieldset  knitting-form__fieldset--gray">
+        <section class="knitting-form__fieldset  knitting-form__fieldset--color">
           <div class="knitting-form__fieldset-wrapper">
-            <h2 class="knitting-form__legend">Цвет</h2>
+            <h2 class="knitting-form__legend  knitting-form__legend--color">Цвет</h2>
             <div class="knitting-form__fieldset-items">
               <label class="knitting-form__label-checkbox" for="cl-white">
                 <input class="knitting-form__input-checkbox" type="checkbox" name="cl-white" id="cl-white" checked>
@@ -99,9 +98,9 @@
             </div>
           </div>
         </section>
-        <section class="knitting-form__fieldset">
+        <section class="knitting-form__fieldset  knitting-form__fieldset--name">
           <div class="knitting-form__fieldset-wrapper">
-            <h2 class="knitting-form__legend">ФИО</h2>
+            <h2 class="knitting-form__legend  knitting-form__legend--name">ФИО</h2>
             <div class="knitting-form__fieldset-items">
               <div class="knitting-form__input-container">
                 <label class="knitting-form__label" for="name">Имя:</label>
@@ -118,25 +117,25 @@
             </div>
           </div>
         </section>
-        <section class="knitting-form__fieldset  knitting-form__fieldset--gray">
+        <section class="knitting-form__fieldset  knitting-form__fieldset--tel">
           <div class="knitting-form__fieldset-wrapper">
-            <h2 class="knitting-form__legend">Тел</h2>
+            <h2 class="knitting-form__legend  knitting-form__legend--tel">Тел</h2>
             <div class="knitting-form__fieldset-items">
               <input class="knitting-form__input-tel" type="tel" name="tel" placeholder="+7 XXX XX XX">
             </div>
           </div>
         </section>
-        <section class="knitting-form__fieldset  knitting-form__fieldset--gray">
+        <section class="knitting-form__fieldset  knitting-form__fieldset--email">
           <div class="knitting-form__fieldset-wrapper">
-            <h2 class="knitting-form__legend">E-mail</h2>
+            <h2 class="knitting-form__legend  knitting-form__legend--email">E-mail</h2>
             <div class="knitting-form__fieldset-items">
               <input class="knitting-form__input-email" type="email" name="email" placeholder="Ваш Email">
             </div>
           </div>
         </section>
-        <section class="knitting-form__fieldset  knitting-form__fieldset--addional">
+        <section class="knitting-form__fieldset  knitting-form__fieldset--additional">
           <div class="knitting-form__fieldset-wrapper">
-            <h2 class="knitting-form__legend">Доп</h2>
+            <h2 class="knitting-form__legend  knitting-form__legend--additional">Доп</h2>
             <div class="knitting-form__fieldset-items">
               <textarea class="knitting-form__textarea" name="additional" id="additional" placeholder="Опишите все ваши пожелания к заказу"></textarea>
             </div>
