--- a/index.html
+++ b/index.html
@@ -81,8 +81,8 @@
               <td>15 см</td>
             </tr>
           </table>
-          <!--img class="product-week__img" src="img/triple-set-mobile@1x.jpg" width="260" height="315" alt="Вязанные корзинки"-->
-          <div class="product-week__img"></div>
+          <img class="product-week__img" src="img/triple-set-mobile@1x.jpg" width="260" height="315" alt="Вязанные корзинки">
+          <!--div class="product-week__img"></div-->
           <footer class="product-week__footer">
             <b class="product-week__cy">Цена: 990 руб.</b>
             <a class="btn  product-week__buy" href="#">Заказать</a>
@@ -133,7 +133,7 @@
             </div>
           </div>
           <!--img class="contacts__map" src="img/map-mobile@1x.jpg" width="320" height="457" alt="Интернет-магазин «Мишка»"-->
-          <div class="contacts__map"></div>
+          <div class="contacts__map" id="yandex-map"></div>
           <a class="btn  contacts__write-us" href="#">Напишите нам</a>
         </div>
       </section>
@@ -173,5 +173,6 @@
       </form>
     </div>
     <script src="js/mobile-menu.js"></script>
+    <script type="text/javascript" charset="utf-8" async src="https://api-maps.yandex.ru/services/constructor/1.0/js/?sid=mmi84hJGmUJ6xS6zR0vvMZzs0A8caoQw&amp;width=100%&amp;height=457&amp;lang=ru_RU&amp;sourceType=constructor&amp;scroll=true&amp;id=yandex-map"></script>
   </body>
 </html>
