--- a/catalog.html
+++ b/catalog.html
@@ -51,7 +51,7 @@
       <section class="product-catalog">
         <article class="product">
           <a class="product__photo" href="#">
-            <!--img class="product__img" src="img/photo-1-mobile@1x.jpg" width="260" height="195" alt="Зайчик-попрыгайчик"-->
+            <img class="product__img" src="img/photo-1-mobile@1x.jpg" width="260" height="195" alt="Зайчик-попрыгайчик">
           </a>
           <div class="product__content">
             <a class="product__title" href="#">Зайчик-попрыгайчик</a>
@@ -66,7 +66,7 @@
         </article>
         <article class="product">
           <a class="product__photo" href="#">
-            <!--img class="product__img" src="img/photo-2-mobile@1x.jpg" width="260" height="195" alt="Корзинка для белья"-->
+            <img class="product__img" src="img/photo-2-mobile@1x.jpg" width="260" height="195" alt="Корзинка для белья">
           </a>
           <div class="product__content">
             <a class="product__title" href="#">Корзинка для белья</a>
@@ -81,7 +81,7 @@
         </article>
         <article class="product">
           <a class="product__photo" href="#">
-            <!--img class="product__img" src="img/photo-3-mobile@1x.jpg" width="260" height="195" alt="Большая корзинка для игрушек"-->
+            <img class="product__img" src="img/photo-3-mobile@1x.jpg" width="260" height="195" alt="Большая корзинка для игрушек">
           </a>
           <div class="product__content">
             <a class="product__title" href="#">Большая корзинка для игрушек</a>
@@ -97,9 +97,8 @@
       </section>
       <section class="production">
         <b class="production__title">Процесс производства</b>
-        <!--video controls preload="metadata" width="260" height="150" poster="img/video-mobile@1x.jpg"></video-->
-        <!--img class="production__video" src="img/video-mobile@1x.jpg" width="260" height="150" alt="Процесс производства"-->
-        <div class="production__video"></div>
+        <img class="production__video" src="img/video-mobile@1x.jpg" width="260" height="150" alt="Процесс производства">
+        <!--div class="production__video"></div-->
         <div class="production__content">
           <p class="production__desc">
             По просьбам наших любимых фолловеров мы сняли для вас подробное видео о том, как появляются наши товары.
