--- a/catalog.html
+++ b/catalog.html
@@ -11,9 +11,13 @@
       <nav class="main-nav  main-nav--closed  main-nav--nojs">
         <button class="main-nav__toggle" type="button">Меню</button>
         <div class="main-nav__wrapper">
-          <div class="logo  logo--header">
+          <div class="main-nav__logo">
             <a href="index.html">
-              <img src="img/logo-mobile.svg" width="86" height="35" alt="Интернет-магазин «Мишка»">
+              <picture>
+                <source media="(min-width: 1150px)" srcset="img/logo-desktop.svg">
+                <source media="(min-width: 768px)" srcset="img/logo-tablet.svg">
+                <img src="img/logo-mobile.svg" alt="Интернет-магазин «Мишка»">
+              </picture>
             </a>
           </div>
           <ul class="main-nav__menu-list  main-nav__menu-list--main">
@@ -51,54 +55,65 @@
       <section class="product-catalog">
         <article class="product">
           <a class="product__photo" href="#">
-            <img class="product__img" src="img/photo-1-mobile@1x.jpg" width="260" height="195" alt="Зайчик-попрыгайчик">
+            <picture>
+              <source media="(min-width: 1150px)" srcset="img/photo-1-desktop@1x.jpg 1x, img/photo-1-desktop@2x.jpg 2x">
+              <source media="(min-width: 768px)" srcset="img/photo-1-tablet@1x.jpg 1x, img/photo-1-tablet@2x.jpg 2x">
+              <img class="product__img" src="img/photo-1-mobile@1x.jpg" srcset="img/photo-1-mobile@2x.jpg 2x" alt="Зайчик-попрыгайчик">
+            </picture>
           </a>
           <div class="product__content">
             <a class="product__title" href="#">Зайчик-попрыгайчик</a>
             <span class="product__properties">Рост 30 см, вес 200 г</span>
             <div class="product__wrapper">
               <b class="product__cy">1 200 руб.</b>
-              <a class="product__buy" href="#">
-                <img src="img/icon-cart.svg" width="21" height="19" alt="Заказать">
-              </a>
+              <a class="product__buy" href="#">Заказать</a>
             </div>
           </div>
         </article>
         <article class="product">
           <a class="product__photo" href="#">
-            <img class="product__img" src="img/photo-2-mobile@1x.jpg" width="260" height="195" alt="Корзинка для белья">
+            <picture>
+              <source media="(min-width: 1150px)" srcset="img/photo-2-desktop@1x.jpg 1x, img/photo-2-desktop@2x.jpg 2x">
+              <source media="(min-width: 768px)" srcset="img/photo-2-tablet@1x.jpg 1x, img/photo-2-tablet@2x.jpg 2x">
+              <img class="product__img" src="img/photo-2-mobile@1x.jpg" srcset="img/photo-2-mobile@2x.jpg 2x" alt="Корзинка для белья">
+            </picture>
           </a>
           <div class="product__content">
             <a class="product__title" href="#">Корзинка для белья</a>
             <span class="product__properties">Диаметр 15 см, высота 10 см</span>
             <div class="product__wrapper">
               <b class="product__cy">690 руб.</b>
-              <a class="product__buy" href="#">
-                <img src="img/icon-cart.svg" width="21" height="19" alt="Заказать">
-              </a>
+              <a class="product__buy" href="#">Заказать</a>
             </div>
           </div>
         </article>
         <article class="product">
           <a class="product__photo" href="#">
-            <img class="product__img" src="img/photo-3-mobile@1x.jpg" width="260" height="195" alt="Большая корзинка для игрушек">
+            <picture>
+              <source media="(min-width: 1150px)" srcset="img/photo-3-desktop@1x.jpg 1x, img/photo-3-desktop@2x.jpg 2x">
+              <source media="(min-width: 768px)" srcset="img/photo-3-tablet@1x.jpg 1x, img/photo-3-tablet@2x.jpg 2x">
+              <img class="product__img" src="img/photo-3-mobile@1x.jpg" srcset="img/photo-3-mobile@2x.jpg 2x" alt="Большая корзинка для игрушек">
+            </picture>
           </a>
           <div class="product__content">
             <a class="product__title" href="#">Большая корзинка для игрушек</a>
             <span class="product__properties">Диаметр 30 см, высота 30 см</span>
             <div class="product__wrapper">
               <b class="product__cy">1 500 руб.</b>
-              <a class="product__buy" href="#">
-                <img src="img/icon-cart.svg" width="21" height="19" alt="Заказать">
-              </a>
+              <a class="product__buy" href="#">Заказать</a>
             </div>
           </div>
         </article>
       </section>
       <section class="production">
         <b class="production__title">Процесс производства</b>
-        <img class="production__video" src="img/video-mobile@1x.jpg" width="260" height="150" alt="Процесс производства">
-        <!--div class="production__video"></div-->
+        <div class="production__video">
+          <picture>
+            <source media="(min-width: 1150px)" srcset="img/video-desktop@1x.jpg 1x, img/video-desktop@2x.jpg 2x">
+            <source media="(min-width: 768px)" srcset="img/video-tablet@1x.jpg 1x, img/video-tablet@2x.jpg 2x">
+            <img src="img/video-mobile@1x.jpg" srcset="img/video-mobile@2x.jpg 2x" alt="Процесс производства">
+          </picture>
+        </div>
         <div class="production__content">
           <p class="production__desc">
             По просьбам наших любимых фолловеров мы сняли для вас подробное видео о том, как появляются наши товары.
@@ -109,10 +124,8 @@
     </main>
     <footer class="page-footer">
       <div class="page-footer__wrapper">
-        <div class="logo  logo--footer">
-          <a href="#">
-            <img src="img/logo-mobile.svg" width="86" height="35" alt="Интернет-магазин «Мишка»">
-          </a>
+        <div class="page-footer__logo">
+          <a class="page-footer__logo-link" href="index.html">Mishka</a>
         </div>
         <div class="social">
           <a class="social-btn  social-btn--instagram" href="#">Instagram</a>
@@ -120,8 +133,7 @@
           <a class="social-btn  social-btn--twitter" href="#">Twitter</a>
         </div>
         <div class="copyright">
-          <span class="copyright__text">Разработано</span>
-          <a class="copyright__link" href="htmlacademy.ru"><img src="img/logo-htmlacademy.svg" width="27" height="34" alt="HTML Academy"></a>
+          <a class="copyright__link" href="https://htmlacademy.ru">Разработано</a>
         </div>
       </div>
     </footer>
@@ -140,6 +152,7 @@
         <button class="modal-size__add" type="submit">Добавить</button>
       </form>
     </div>
+    <script src="js/picturefill.min.js"></script>
     <script src="js/mobile-menu.js"></script>
   </body>
 </html>
