--- a/index.html
+++ b/index.html
@@ -11,9 +11,13 @@
       <nav class="main-nav  main-nav--closed  main-nav--nojs">
         <button class="main-nav__toggle" type="button">Меню</button>
         <div class="main-nav__wrapper">
-          <div class="logo  logo--header">
+          <div class="main-nav__logo">
             <a href="#">
-              <img src="img/logo-mobile.svg" width="86" height="35" alt="Интернет-магазин «Мишка»">
+              <picture>
+                <source media="(min-width: 1150px)" srcset="img/logo-desktop.svg">
+                <source media="(min-width: 768px)" srcset="img/logo-tablet.svg">
+                <img src="img/logo-mobile.svg" alt="Интернет-магазин «Мишка»">
+              </picture>
             </a>
           </div>
           <ul class="main-nav__menu-list  main-nav__menu-list--main">
@@ -81,8 +85,11 @@
               <td>15 см</td>
             </tr>
           </table>
-          <img class="product-week__img" src="img/triple-set-mobile@1x.jpg" width="260" height="315" alt="Вязанные корзинки">
-          <!--div class="product-week__img"></div-->
+          <picture>
+            <source media="(min-width: 1150px)" srcset="img/triple-set-desktop@1x.jpg 1x, img/triple-set-desktop@2x.jpg 2x">
+            <source media="(min-width: 768px)" srcset="img/triple-set-tablet@1x.jpg 1x, img/triple-set-tablet@2x.jpg 2x">
+            <img class="product-week__img" src="img/triple-set-mobile@1x.jpg" srcset="img/triple-set-mobile@2x.jpg 2x" alt="Вязанные корзинки">
+          </picture>
           <footer class="product-week__footer">
             <b class="product-week__cy">Цена: 990 руб.</b>
             <a class="btn  product-week__buy" href="#">Заказать</a>
@@ -132,7 +139,6 @@
               <div class="contacts__item-text">г. Санкт-Петербург,<br>ул. Большая Конюшенная,<br>д. 19/8, офис 101</div>
             </div>
           </div>
-          <!--img class="contacts__map" src="img/map-mobile@1x.jpg" width="320" height="457" alt="Интернет-магазин «Мишка»"-->
           <div class="contacts__map" id="yandex-map"></div>
           <a class="btn  contacts__write-us" href="#">Напишите нам</a>
         </div>
@@ -140,10 +146,8 @@
     </main>
     <footer class="page-footer">
       <div class="page-footer__wrapper">
-        <div class="logo  logo--footer">
-          <a href="#">
-            <img src="img/logo-mobile.svg" width="86" height="35" alt="Интернет-магазин «Мишка»">
-          </a>
+        <div class="page-footer__logo">
+          <a class="page-footer__logo-link" href="#">Mishka</a>
         </div>
         <div class="social">
           <a class="social-btn  social-btn--instagram" href="#">Instagram</a>
@@ -151,8 +155,7 @@
           <a class="social-btn  social-btn--twitter" href="#">Twitter</a>
         </div>
         <div class="copyright">
-          <span class="copyright__text">Разработано</span>
-          <a class="copyright__link" href="htmlacademy.ru"><img src="img/logo-htmlacademy.svg" width="27" height="34" alt="HTML Academy"></a>
+          <a class="copyright__link" href="https://htmlacademy.ru">Разработано</a>
         </div>
       </div>
     </footer>
@@ -172,7 +175,8 @@
         <button class="modal-size__add" type="submit">Добавить</button>
       </form>
     </div>
+    <script src="js/picturefill.min.js"></script>
     <script src="js/mobile-menu.js"></script>
-    <script type="text/javascript" charset="utf-8" async src="https://api-maps.yandex.ru/services/constructor/1.0/js/?sid=mmi84hJGmUJ6xS6zR0vvMZzs0A8caoQw&amp;width=100%&amp;height=457&amp;lang=ru_RU&amp;sourceType=constructor&amp;scroll=true&amp;id=yandex-map"></script>
+    <script type="text/javascript" charset="utf-8" async src="https://api-maps.yandex.ru/services/constructor/1.0/js/?sid=mmi84hJGmUJ6xS6zR0vvMZzs0A8caoQw&amp;width=auto&amp;height=457&amp;lang=ru_RU&amp;sourceType=constructor&amp;scroll=true&amp;id=yandex-map"></script>
   </body>
 </html>
