--- a/form.html
+++ b/form.html
@@ -30,18 +30,18 @@
           </ul>
           <ul class="main-nav__menu-list  main-nav__menu-list--user">
             <li class="main-nav__menu-item   main-nav__menu-item--user">
-              <a class="main-nav__link  main-nav__link--search" href="#">Поиск по сайту</a>
+              <a class="main-nav__link  main-nav__link--search" href="search.html">Поиск по сайту</a>
             </li>
             <li class="main-nav__menu-item  main-nav__menu-item--user">
-              <a class="main-nav__link  main-nav__link--cart" href="#">Корзина: пока пуста</a>
+              <a class="main-nav__link  main-nav__link--cart" href="cart.html">Корзина: пока пуста</a>
             </li>
           </ul>
           <ul class="main-nav__special">
             <li class="main-nav__special-item">
-              <a class="main-nav__link" href="#">Новые поступления</a>
+              <a class="main-nav__link" href="new.html">Новые поступления</a>
             </li>
             <li class="main-nav__special-item">
-              <a class="main-nav__link" href="#">Распродажа</a>
+              <a class="main-nav__link" href="sale.html">Распродажа</a>
             </li>
           </ul>
           <span class="main-nav__label">Бесплатная доставка по России</span>
