--- a/index.html
+++ b/index.html
@@ -30,18 +30,18 @@
           </ul>
           <ul class="main-nav__menu-list  main-nav__menu-list--user">
             <li class="main-nav__menu-item   main-nav__menu-item--user">
-              <a class="main-nav__link  main-nav__link--search" href="#">Поиск по сайту</a>
+              <a class="main-nav__link  main-nav__link--search" href="search.html">Поиск по сайту</a>
             </li>
             <li class="main-nav__menu-item  main-nav__menu-item--user">
-              <a class="main-nav__link  main-nav__link--cart" href="#">Корзина: пока пуста</a>
+              <a class="main-nav__link  main-nav__link--cart" href="cart.html">Корзина: пока пуста</a>
             </li>
           </ul>
           <ul class="main-nav__special">
             <li class="main-nav__special-item">
-              <a class="main-nav__link" href="#">Новые поступления</a>
+              <a class="main-nav__link" href="new.html">Новые поступления</a>
             </li>
             <li class="main-nav__special-item">
-              <a class="main-nav__link" href="#">Распродажа</a>
+              <a class="main-nav__link" href="sale.html">Распродажа</a>
             </li>
           </ul>
           <span class="main-nav__label">Бесплатная доставка по России</span>
@@ -55,10 +55,10 @@
       <section class="product-type">
         <ul class="product-type__list">
           <li class="product-type__item">
-            <a class="product-type__link product-type__link--interior" href="#">Предметы<br>интерьера</a>
+            <a class="product-type__link product-type__link--interior" href="interior.html">Предметы<br>интерьера</a>
           </li>
           <li class="product-type__item">
-            <a class="product-type__link product-type__link--toys" href="#">Детские<br>игрушки</a>
+            <a class="product-type__link product-type__link--toys" href="toys.html">Детские<br>игрушки</a>
           </li>
         </ul>
       </section>
@@ -92,7 +92,7 @@
           </picture>
           <footer class="product-week__footer">
             <b class="product-week__cy">Цена: 990 руб.</b>
-            <a class="btn  product-week__buy" href="#">Заказать</a>
+            <a class="btn  product-week__buy" href="product.html">Заказать</a>
           </footer>
         </div>
       </section>
@@ -120,10 +120,10 @@
             <span class="reviews__author-nickname">@misssssiskras</span>
           </blockquote>
           <div class="reviews__arrows">
-            <a class="reviews__arrow  reviews__arrow--prev" href="#">назад</a>
-            <a class="reviews__arrow  reviews__arrow--next" href="#">вперед</a>
+            <a class="reviews__arrow  reviews__arrow--prev" href="reviews.html">назад</a>
+            <a class="reviews__arrow  reviews__arrow--next" href="reviews.html">вперед</a>
           </div>
-          <a class="btn  reviews__write" href="#">Написать</a>
+          <a class="btn  reviews__write" href="add-review.html">Написать</a>
         </div>
       </section>
       <section class="contacts">
@@ -140,7 +140,7 @@
             </div>
           </div>
           <div class="contacts__map" id="yandex-map"></div>
-          <a class="btn  contacts__write-us" href="#">Напишите нам</a>
+          <a class="btn  contacts__write-us" href="write-us.html">Напишите нам</a>
         </div>
       </section>
     </main>
