--- a/form.html
+++ b/form.html
@@ -52,7 +52,7 @@
       <section class="page-title">
         <h1 class="page-title__label">Вязание на заказ</h1>
       </section>
-      <form class="knitting-form" action="#" method="post">
+      <form class="knitting-form" action="https://echo.htmlacademy.ru" method="post">
         <p class="knitting-form__desc">
           Мы будем рады воплотить в жизнь ваши пожелания! Заполните простую форму заказа и мы свяжемся с вами, чтобы уточнить детали.
         </p>
@@ -125,7 +125,7 @@
           <div class="knitting-form__fieldset-wrapper">
             <h2 class="knitting-form__legend  knitting-form__legend--tel">Тел</h2>
             <div class="knitting-form__fieldset-items">
-              <input class="knitting-form__input-tel" type="tel" name="tel" placeholder="+7 XXX XX XX" required>
+              <input class="knitting-form__input-tel" type="tel" name="tel" placeholder="+7 XXX XX XX" pattern="\+7 [0-9]{3} [0-9]{2} [0-9]{2}" required>
             </div>
           </div>
         </section>
