--- a/catalog.html
+++ b/catalog.html
@@ -16,7 +16,7 @@
               <picture>
                 <source media="(min-width: 1150px)" srcset="img/logo-desktop.svg">
                 <source media="(min-width: 768px)" srcset="img/logo-tablet.svg">
-                <img src="img/logo-mobile.svg" alt="Интернет-магазин «Мишка»">
+                <img class="main-nav__logo-img" src="img/logo-mobile.svg" width="86" height="35" alt="Интернет-магазин «Мишка»">
               </picture>
             </a>
           </div>
@@ -108,6 +108,7 @@
       <section class="production">
         <b class="production__title">Процесс производства</b>
         <div class="production__video">
+          <button class="production__play"></button>
           <picture>
             <source media="(min-width: 1150px)" srcset="img/video-desktop@1x.jpg 1x, img/video-desktop@2x.jpg 2x">
             <source media="(min-width: 768px)" srcset="img/video-tablet@1x.jpg 1x, img/video-tablet@2x.jpg 2x">
@@ -118,7 +119,7 @@
           <p class="production__desc">
             По просьбам наших любимых фолловеров мы сняли для вас подробное видео о том, как появляются наши товары.
           </p>
-          <a class="btn production__order" href="form.html">Сделать заказ</a>
+          <a class="btn btn--production" href="form.html">Сделать заказ</a>
         </div>
       </section>
     </main>
@@ -137,6 +138,7 @@
         </div>
       </div>
     </footer>
+    <div class="modal-overlay"></div>
     <div class="modal-size">
       <b class="modal-size__title">Добавить в корзину</b>
       <form class="modal-size__form" action="#" method="post">
