--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
               <picture>
                 <source media="(min-width: 1150px)" srcset="img/logo-desktop.svg">
                 <source media="(min-width: 768px)" srcset="img/logo-tablet.svg">
-                <img src="img/logo-mobile.svg" alt="Интернет-магазин «Мишка»">
+                <img class="main-nav__logo-img" src="img/logo-mobile.svg" width="86" height="35" alt="Интернет-магазин «Мишка»">
               </picture>
             </a>
           </div>
@@ -92,7 +92,7 @@
           </picture>
           <footer class="product-week__footer">
             <b class="product-week__cy">Цена: 990 руб.</b>
-            <a class="btn  product-week__buy" href="product.html">Заказать</a>
+            <a class="btn  btn--product-week" href="product.html">Заказать</a>
           </footer>
         </div>
       </section>
@@ -112,18 +112,18 @@
       <section class="reviews">
         <div class="reviews__wrapper">
           <h2 class="reviews__title">Отзывы</h2>
-          <blockquote class="reviews__item">
+          <div class="reviews__item">
             <p class="reviews__text">
               Я молодая мама, но всё равно фотографии не набирали и близко такого количества лайков, как у популярных инстамамочек. В отчаянии, я накупила аксессуаров и игрушек в Мишке, и мои фотографии сразу стали более стильнее, а также набирают больше лайков!
             </p>
-            <cite class="reviews__author-name">Анастасия Красильникова</cite>
+            <b class="reviews__author-name">Анастасия Красильникова</b>
             <span class="reviews__author-nickname">@misssssiskras</span>
-          </blockquote>
+          </div>
           <div class="reviews__arrows">
             <a class="reviews__arrow  reviews__arrow--prev" href="reviews.html">назад</a>
             <a class="reviews__arrow  reviews__arrow--next" href="reviews.html">вперед</a>
           </div>
-          <a class="btn  reviews__write" href="add-review.html">Написать</a>
+          <a class="btn  btn--reviews" href="add-review.html">Написать</a>
         </div>
       </section>
       <section class="contacts">
@@ -140,7 +140,7 @@
             </div>
           </div>
           <div class="contacts__map" id="yandex-map"></div>
-          <a class="btn  contacts__write-us" href="write-us.html">Напишите нам</a>
+          <a class="btn  btn--write-us" href="write-us.html">Напишите нам</a>
         </div>
       </section>
     </main>
